test/libsolidity/syntaxTests/freeFunctions/function_same_name_as_contract.sol
contract C {}
function C() {}
// ----
// DeclarationError 2333: (14-29): Identifier already declared.
